# VeilVote

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  LICENSE  README.md  fix-emdash.ps1  fix-text.ps1  package.json
app/: next.config.ts  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/api/build-tx/: route.ts
app/src/app/api/encrypt-vote/: route.ts
app/src/app/how-it-works/: page.tsx
app/src/app/proposals/: page.tsx
app/src/app/vote/[id]/: page.tsx
app/src/components/: CountdownTimer.tsx  CreateProposalModal.tsx  DeploymentBanner.tsx  HeroCanvas.tsx  HowItWorksFlow.tsx  Navbar.tsx  ProposalCard.tsx  ResultsChart.tsx  VotePanel.tsx  VoteStatusTracker.tsx  WalletButton.tsx
app/src/lib/: arcium.ts  program.ts  types.ts  veilvote-client.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/veilvote/: Cargo.toml
programs/veilvote/src/: lib.rs
scripts/: vps-setup.sh
tests/: veilvote.ts
